# SD-url-shortener

./: .gitignore  .pre-commit-config.yaml  Dockerfile  app.py  curl.txt  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
api/: Dockerfile  requirements.txt
api/src/: dependencies.py  main.py
api/src/api/: dependencies.py  main.py
api/src/app/: dependencies.py  main.py
api/src/auth/: security.py
api/src/clients/: kgs.py  mongo.py
api/src/core/: config.py  constants.py
api/src/db/: postgres.py
api/src/models/: pydantic.py  sqlalchemy.py
api/src/repositories/: base.py  urls.py  users.py
api/src/routers/: urls.py  users.py
api/src/services/: kgs.py  urls.py  users.py
api/src/utils/: retry.py
api/tests/: test_main.py
api/tests/auth/: test_security.py
api/tests/clients/: test_kgs.py  test_mongo.py
config/: logger_config.json
db/: Dockerfile
db/init/: 01-schemas.sql
db/init/mongo/: 01_create_schema.sh
db/init/postgres/: 01_create_schema.sql
db/models/: users.py
db/utils/: constants.py
kgs/: Dockerfile
kgs/src/: main.py
kgs/src/kgs/: main.py
lb/: Dockerfile
lb/src/load_balancer/: dependencies.py  main.py
lb/tests/: test_lb_main.py
src/: main.py
src/api/controllers/: urls.py  users.py
src/api/repositories/: base.py  urls.py  users.py
src/api/services/: urls.py  users.py
src/auth/helpers/: hasher.py  jwt_token.py  security.py
src/core/: constants.py  errors.py
src/db/: session.py
src/db/models/: pydantic.py  users.py
src/db/schemas/: token.py  url.py  user.py  users.py
ts/: Dockerfile
(+47 files in other folders)
