[project]
name = "sd-url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "jwt>=1.4.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "psycopg2-binary>=2.9.11",
    "pwdlib[bcrypt]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.7",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
