[project]
name = "sd-url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "coverage>=7.13.1",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "psycopg2-binary>=2.9.11",
    "pwdlib[bcrypt]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.7",
    "sqlalchemy>=2.0.44",
    "types-pyjwt>=1.7.1",
    "uvicorn>=0.38.0",
]

[tool.mypy]
plugins = [
    "pydantic.mypy"
]

[tool.pytest.ini_options]
pythonpath = [
    "api/src",
    "kgs/src"
]
testpaths = [
    "api/tests",
    "kgs/tests"
]

[dependency-groups]
dev = [
    "pytest-env>=1.2.0",
]
